--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">CIS298Assignment1</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="counter">Counter</string>
     <string name="action_settings">Settings</string>
+    <string name="plus_button">+</string>
+    <string name="minus_button">-</string>
 </resources>
